objects/Account/fields/AcctSeed__Accounting_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Type__c</fullName>
    <inlineHelpText>Used in filtered lookups for Payable and Billing screens.</inlineHelpText>
    <label>Accounting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Customer and Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>