objects/Account/fields/AcctSeed__AP_Remittance_Email__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AP_Remittance_Email__c</fullName>
    <inlineHelpText>For use with AP Automation: This is the main email address that will receive Virtual Card payment information and remittance information for any Check and ACH payments. Enter a single email address in this field.</inlineHelpText>
    <label>AP Remittance Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>