objects/Account/fields/AcctSeed__AP_Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AP_Vendor_Email__c</fullName>
    <inlineHelpText>For use with AP Automation: The email address(es) entered here will be sent a copy of Virtual Card payment information and remittance information for any Check and ACH payments. If you have multiple addresses, list them separated by a comma. This is optional.</inlineHelpText>
    <label>AP Vendor Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>