objects/Account/fields/AcctSeed__AS_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AS_Pay_Type__c</fullName>
    <inlineHelpText>Vendor preferred payment type selected in Payment Services.</inlineHelpText>
    <label>Payment Services Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__AS_Pay_Type</valueSetName>
    </valueSet>
</CustomField>