objects/Account/fields/AcctSeed__Billing_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to configure formatting and display of fields in Billing PDF. Overrides the default Billing Format defined in Accounting Settings.</inlineHelpText>
    <label>Billing Format</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Billing</value>
        </filterItems>
        <infoMessage>The Type must equal &quot;Billing&quot;</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipLabel>Accounts (Billing Format)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>