objects/Account/fields/AcctSeed__Default_Expense_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Default_Expense_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default Expense GL Account used for this Vendor when creating Payable records.</inlineHelpText>
    <label>Default Expense GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
            <operation>notEqual</operation>
            <value>Cash Flow</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>