objects/Account/fields/AcctSeed__Enable_Payment_Services__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Enable_Payment_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to enable this Vendor for Payment Services.</inlineHelpText>
    <label>Enable Payment Services</label>
    <type>Checkbox</type>
</CustomField>