objects/Account/fields/AcctSeed__Last_Payment_Services_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Last_Payment_Services_Sync_Date__c</fullName>
    <inlineHelpText>Last date the vendor record has been synced with Payment Services.</inlineHelpText>
    <label>Last Payment Services Sync Date</label>
    <type>DateTime</type>
</CustomField>