objects/Account/fields/AcctSeed__Outstanding_Statement_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Outstanding_Statement_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Overrides the default Outstanding Statement defined in Accounting Settings for this specific Customer.</inlineHelpText>
    <label>Outstanding Statement Format</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Outstanding Statement</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>