objects/Account/fields/AcctSeed__Payment_Services_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Services_Enrollment_Status__c</fullName>
    <inlineHelpText>Indicates the status of the enrollment of the Vendor with Payment Services.</inlineHelpText>
    <label>Payment Services Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>