objects/Account/fields/AcctSeed__Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default for main shipping contact in Accounting Seed Billing, Sales Orders and Purchase Orders</inlineHelpText>
    <label>Shipping Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Shipping Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>