objects/Account/fields/AcctSeedERP__Default_Packing_Slip_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Default_Packing_Slip_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Packing Slip Format</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Packing Slip</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipLabel>Accounts (Default Packing Slip Format)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>