objects/Account/fields/AcctSeedERP__Default_Purchase_Order_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Default_Purchase_Order_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Purchase Order Format</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Purchase Order</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipLabel>Accounts (Default Purchase Order Format)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>