objects/Account/fields/Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone__c</fullName>
    <label>Company&apos;s Phone</label>
    <type>Phone</type>
</CustomField>