objects/Account/fields/Billing_City_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_City_State__c</fullName>
    <formula>BillingCity + &apos;,&apos; +  BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City &amp; State</label>
    <type>Text</type>
</CustomField>