objects/Account/fields/Conversion__c.field-meta.xml
<CustomField>
    <fullName>Conversion__c</fullName>
    <label>Conversion %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>