objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <displayFormat>CA-{0000}</displayFormat>
    <label>Customer #</label>
    <type>AutoNumber</type>
</CustomField>