objects/Account/fields/Decision_maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_maker__c</fullName>
    <label>Decision-maker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>