objects/Account/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <formula>if(Reseller_Certificate__c =TRUE,IMAGE(&quot;https://maestrotradex--aeolusdev--c.visualforce.com/resource/1629954012000/GreenBar_Reseller&quot;, &quot;GreenBar_Reseller&quot;),IMAGE(&quot;https://maestrotradex--aeolusdev--c.visualforce.com/resource/1629953932000/RedBar_Reseller&quot;, &quot;RedBar_Reseller&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Status</label>
    <type>Text</type>
</CustomField>