objects/Account/fields/e_Company_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>e_Company_LinkedIn__c</fullName>
    <label>Company LinkedIn</label>
    <type>Url</type>
</CustomField>