objects/Account/fields/EIN_Number__c.field-meta.xml
<CustomField>
    <fullName>EIN_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EIN Number</label>
    <type>Checkbox</type>
</CustomField>