objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Company&apos;s Mail ID</label>
    <type>Email</type>
</CustomField>