objects/Account/fields/Existing_Brands_in_Use_in_Steer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Brands_in_Use_in_Steer__c</fullName>
    <label>Existing Brands in Use in Steer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>