objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>