objects/Account/fields/Major_Sizes_used_by_Custome__c.field-meta.xml
<CustomField>
    <fullName>Major_Sizes_used_by_Custome__c</fullName>
    <label>Major Sizes used by Customer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11R22.5</fullName>
            </value>
            <value>
                <fullName>11R24.5</fullName>
            </value>
            <value>
                <fullName>255/75R22.5</fullName>
            </value>
            <value>
                <fullName>285/75R24.5</fullName>
            </value>
            <value>
                <fullName>295/75R22.5</fullName>
            </value>
            <value>
                <fullName>315/80R22.5</fullName>
            </value>
            <value>
                <fullName>385/65R22.5</fullName>
            </value>
            <value>
                <fullName>425/65R22.5</fullName>
            </value>
            <value>
                <fullName>445/50R22.5</fullName>
            </value>
            <value>
                <fullName>Any other sizes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>