objects/Account/fields/Notes_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Notes_If_Any__c</fullName>
    <label>Notes(If Any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>