objects/Account/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <label>Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>