objects/Account/fields/Opportunity_Amount_by_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_by_Stage__c</fullName>
    <label>Opportunity Amount by Stage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>