objects/Account/fields/Our_Alternative_Offer__c.field-meta.xml
<CustomField>
    <fullName>Our_Alternative_Offer__c</fullName>
    <label>Our Alternative Offer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>