objects/Account/fields/Payment_Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Reason__c</fullName>
    <inlineHelpText>Give Reason if you have Payment Issue</inlineHelpText>
    <label>Payment Issue Reason</label>
    <type>TextArea</type>
</CustomField>