objects/Account/fields/Payment_Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issue_Status__c</fullName>
    <formula>IF(  Payment_Issues__c = TRUE , IMAGE(&quot;https://maestrotradex--aeolusdev--c.visualforce.com/resource/1629966467000/RedBar_PaymentIssueCredit&quot;, &quot;RedBar_PaymentIssueCredit&quot;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Issue Status</label>
    <type>Text</type>
</CustomField>