objects/Account/fields/Payment_Issues__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please Check the Box if you have Payment Issue and Give Reason in the Payment Issue Reason</inlineHelpText>
    <label>Payment Issue</label>
    <type>Checkbox</type>
</CustomField>