objects/Account/fields/Ratio_of_Truck_Vs_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Ratio_of_Truck_Vs_Trailer__c</fullName>
    <label>Ratio of Truck Vs Trailer</label>
    <length>10</length>
    <type>Text</type>
</CustomField>