objects/Account/fields/Reffering_Existing_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reffering_Existing_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Existing Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>