objects/Account/fields/Reseller_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reseller Certificate</label>
    <type>Checkbox</type>
</CustomField>