objects/Account/fields/ShippingAddress_same_as_BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress_same_as_BillingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Address same as Billing Address</label>
    <type>Checkbox</type>
</CustomField>