objects/Account/fields/Source_Websites_customer_refer_to__c.field-meta.xml
<CustomField>
    <fullName>Source_Websites_customer_refer_to__c</fullName>
    <label>Websites/Platforms customer gen visits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>