objects/Account/fields/Special_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Special_Remarks__c</fullName>
    <label>Account Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>