objects/Account/fields/tdc_tvte__EmailAccount__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__EmailAccount__c</fullName>
    <label>EmailAccount</label>
    <type>Email</type>
</CustomField>