objects/Account/recordTypes/B2C_Customer.recordType-meta.xml
<RecordType>
    <fullName>B2C_Customer</fullName>
    <active>true</active>
    <label>B2C Customer</label>
</RecordType>