objects/Account/recordTypes/End_Consumer.recordType-meta.xml
<RecordType>
    <fullName>End_Consumer</fullName>
    <active>true</active>
    <label>Fleet Consumer</label>
</RecordType>