objects/Account/validationRules/CompanyPhoneNoValidation_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>CompanyPhoneNoValidation_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Alternate_Phone__c)),NOT(REGEX( Alternate_Phone__c, &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Alternate_Phone__c</errorDisplayField>
    <errorMessage>Please enter 10 digit Company&apos;s Phone Number.</errorMessage>
</ValidationRule>