objects/Account/validationRules/FaxNoValidation_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>FaxNoValidation_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Fax)),NOT(REGEX( Fax, &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Please enter 10 digit Fax.</errorMessage>
</ValidationRule>