objects/Account/validationRules/PhoneNoValidation_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNoValidation_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Phone  )),NOT(REGEX( Phone  , &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter 10 digit Phone Number.</errorMessage>
</ValidationRule>