objects/Account/validationRules/ReasonofPaymentIssueVR.validationRule-meta.xml
<ValidationRule>
    <fullName>ReasonofPaymentIssueVR</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Payment_Issues__c , ISBLANK( Payment_Issue_Reason__c ), null  )</errorConditionFormula>
    <errorMessage>Please Enter Payment Issue Reason.</errorMessage>
</ValidationRule>