objects/Account/listViews/AcctSeed__Enrolled_in_Payment_Services.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Enrolled_in_Payment_Services</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>AcctSeed__Payment_Services_Vendor_ID__c</columns>
    <columns>AcctSeed__Enable_Payment_Services__c</columns>
    <columns>AcctSeed__Payment_Services_Enrollment_Status__c</columns>
    <columns>AcctSeed__Last_Payment_Services_Sync_Date__c</columns>
    <columns>AcctSeed__AS_Pay_Type__c</columns>
    <columns>AcctSeed__Aggregate_by_Payee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Accounting_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>AcctSeed__Accounting_Type__c</field>
        <operation>equals</operation>
        <value>Vendor</value>
    </filters>
    <filters>
        <field>AcctSeed__Accounting_Type__c</field>
        <operation>equals</operation>
        <value>Customer and Vendor</value>
    </filters>
    <filters>
        <field>AcctSeed__Payment_Services_Enrollment_Status__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </filters>
    <label>Enrolled in Payment Services</label>
</ListView>